--- a/src/global.css
+++ b/src/global.css
@@ -6,3 +6,7 @@
 html {
     scroll-snap-type: y mandatory;
 }
+
+t-gradient {
+    background: 'linear-gradient(125deg, rgba(0,123,132,.3) 0%, rgba(0,0,0,.7) 100%);'
+}
